4 Feb 2018
update: rating when torrent not downloaded
update: queries block
fix: cache variable
add: cache stats for memcache, redis, apcu and files
hide: display of stats from all but staff

3 Feb 2018
fix: freeuser_update.php
add: redirect to login on no session
update: sql files

2 Feb 2018
fix: typo in site_config hnr
remove: duplicate, unused images
fix: rating system, using ajax
add: torrent search suggestions
move: create session variable salt to login function
fix: 350 millisecond page load delay on page refresh

1 Feb 2018
update: sql files
fix: code block bbcode on ajax chat
fix: users cache for AJAX Chat when staff add user
fix: session canary and regenerate session id
add: encrypted session data, may require delete current sessions
update: emails to html
add: mail class to send emails, adds headers and sennds both plain text and html versions or email
update: torrents scoller to force image dimensions, images all face-up

28 Jan 2018
update: wiki item formatting
update: catalog.php formatting remove bbcode from description
update: catalog.php formatting when no peers
add: catalog.php
update: alphabatize nav menu links
update: wiki highlight active tab
update: make AJAX Chat default audio html5, flash is not working in current ubuntu chrome
update: get_poll return false when no poll
update: update poll_data cache when user votes
update: scroll to poll if user not voted
update: use fluentpdo in tvmaze functions
update: tvmaze and imdb api to limit cast to first 30
update: tvmaze and imdb api to only cache the data, not the html
add: tvmaze table with all tvmaze ids for quicker lookup
add: tvmaze cleanup to get new tvmaze id's
update: README to show tvmaze insert/update
update: sql dumps to allow update
update: tvmaze api to include episode info
update: fanart api to include tv 

27 Jan 2018
remove: check for imdb dir during install

26 Jan 2018
fix: polls
remove: thumbsup, torrent rating is sufficient
update: set overlay height correctly

25 Jan 2018