@@ -1,4 +1,5 @@
 4 Feb 2018
+update: trivia always autrefresh, hide days when lees than 1 day
 update: rating when torrent not downloaded
 update: queries block
 fix: cache variable
